--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <canvas id="board" width="960" height="768" style="border: 3px solid;"></canvas>
     <script src="script.js"></script>
     <p style="font-size: xx-large;">use w,a,s,d to move</p>
+    <p style="font-size: xx-large;">use q to dash</p>
     <p style="font-size: xx-large;">use f to attack</p>
 </body>
 </html>
