--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPG</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="text-align: center; margin:0;">
-    <canvas id="board" width="960" height="768" style="border: 3px solid;"></canvas>
+<body>
+    <canvas id="board" width="960" height="768"></canvas>
     <script src="script.js"></script>
-    <p style="font-size: xx-large;">use w,a,s,d to move</p>
-    <p style="font-size: xx-large;">use q to dash</p>
-    <p style="font-size: xx-large;">use f to attack</p>
+    <p class="description">use w,a,s,d to move</p>
+    <p class="description">use q to dash</p>
+    <p class="description">use f to attack</p>
 </body>
 </html>
