Added invincibilty to dash

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <canvas id="board" width="960" height="768"></canvas>
     <script src="script.js"></script>
     <p class="description">use w,a,s,d to move</p>
-    <p class="description">use q to dash</p>
+    <p class="description">use q to dodge</p>
     <p class="description">use f to attack</p>
 </body>
 </html>
